# TraceSure-GxP-Sample-Lifecycle-Management-System

./: LICENSE
TraceSure/: .gitignore  docker-compose.yml  dockerfile  pyproject.toml
TraceSure/documents/: docker-commands.txt  postgres-commands.txt  sample_roles.json
TraceSure/src/backend/: app.py
TraceSure/src/backend/auth/: dependencies.py  jwt_handler.py
TraceSure/src/backend/dependencies/: dependency.py
TraceSure/src/backend/endpoints/post_endpoints/: test_management.py  user_auth.py
TraceSure/src/backend/models/: trackerdb.py
TraceSure/src/backend/schemas/: sample_schema.py  schemas.py  user_auth_schema.py
TraceSure/src/backend/services/: samples.py  specifications.py
TraceSure/src/frontend/: index.html
TraceSure/src/frontend/navigation/: dashboard-main.html  login.html  register.html
TraceSure/src/frontend/scripts/: dashboard-main.js  login.js  navigation.js  register.js
TraceSure/src/frontend/styles/: container-1.css  container-2-login.css  container-2-register.css  container-2.css  container-3.css  global-styles.css
