[project]
name = "tracesure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.129.0",
    "python-jose>=3.3.0",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.46",
    "typing>=3.10.0.0",
    "uvicorn>=0.40.0",
    "bcrypt>=5.0.0",
    "argon2-cffi>=25.1.0",
]
